<resources>
    <string name="app_name">Afieat</string>
    <string name="currency">IQD&#160;</string>
    <string name="currency_us">USD&#160;</string>
    <string name="title_address">Address</string>
    <string name="title_add_address">Add Address</string>
    <string name="title_update_address">Update Address</string>
    <string name="title_check_in">Log In or Register</string>
    <string name="title_log_in">Log In</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_create_account">Create Account</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="title_my_orders">My Orders</string>
    <string name="title_my_voucher">My Vouchers</string>
    <string name="title_my_voucher_detail">My Vouchers Detail</string>
    <string name="title_order_details">Order Details</string>
    <string name="title_menus">Menus</string>
    <string name="title_basket">Basket</string>
    <string name="title_my_wallet">My Wallet</string>
    <string name="title_my_deals">My Deals</string>
    <string name="title_update_password">Update Password</string>
    <string name="title_my_reviews">My Reviews</string>
    <string name="title_delivery_payment">Delivery &amp; Payment</string>
    <string name="title_card_payment">Card Payment</string>
    <string name="title_success">Success</string>
    <string name="title_notification">Notifications</string>
    <string name="title_help_center">Help Center</string>
    <string name="facebook_app_id" translatable="false">2190286324531964</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2190286324531964</string>
    <string name="menu_search">Search</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_info">Info</string>
    <string name="menu_save">Save</string>
    <string name="menu_update">Update</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_default">Make Default</string>
    <string name="msg_email_invalid">Invalid email address</string>
    <string name="msg_field_mandatory">This field is required</string>
    <string name="mobile_msg_field_mandatory">Please enter valid mobile number</string>
    <string name="msg_no_internet">Network unavailable</string>
    <string name="msg_operation_not_completed">Operation could not be completed</string>
    <string name="msg_email_exists">Email Id already exists</string>
    <string name="msg_login_fail">Invalid email address or password.</string>
    <string name="msg_email_sending_fail">Invalid email address.</string>
    <string name="msg_phone_sending_fail">Invalid Phone Number.</string>
    <string name="msg_password_matched">New Password should be different.</string>
    <string name="msg_confirm_password_matched">Confirm Password should be same as new password.</string>
    <string name="msg_password_not_matched">Password not matched.</string>
    <string name="msg_reseting_failed">Reseting password failed</string>
    <string name="msg_server_no_response">No response from server</string>
    <string name="msg_no_regions">No regions available for this city.</string>
    <string name="msg_not_deliverable">Order cannot be delivered in this region.</string>
    <string name="msg_no_restaurants">Sorry! No restaurants available.</string>
    <string name="msg_no_food">Sorry!\n\nNo food items available for this restaurant.</string>
    <string name="msg_pending_order">You already have a pending order from another restaurant. Are you sure to refresh your order basket?</string>
    <string name="msg_no_saved_address">No saved address</string>
    <string name="msg_select_city">Please select a city</string>
    <string name="msg_add_address">Please set GPS location</string>
    <string name="msg_enter_name">Please enter a name</string>
    <string name="msg_enter_father_name">Please enter father\'s name</string>
    <string name="msg_enter_family_name">Please enter family name</string>
    <string name="msg_enter_phone">Please enter a phone number</string>
    <string name="msg_enter_description">Please enter a description</string>
    <string name="msg_select_region">Please select a region</string>
    <string name="msg_no_card">You have no saved cards</string>
    <string name="msg_no_reviews">You have no reviews yet</string>
    <string name="msg_please_login">Please log in to complete this action</string>
    <string name="msg_restaurant_closed">Restaurant is closed at your selected time</string>
    <string name="msg_invalid_promo">Invalid Promo Code</string>
    <string name="msg_promo_not_applicable">Promo not applicable for current items</string>
    <string name="msg_login_promo">You have to be logged in to avail promo</string>
    <string name="msg_not_enough_wallet_balance">Not enough balance in Wallet</string>
    <string name="msg_no_token">Device not identified. Please relaunch the application.</string>
    <string name="promo_error_2">Already redemed voucher.</string>
    <string name="promo_error_3">Invalid voucher.</string>
    <string name="promo_error_4">Invalid parameters.</string>
    <string name="msg_account_created">Account created</string>
    <string name="msg_password_min_6_chars">6 characters minimum</string>
    <string name="msg_please_wait">Please wait</string>
    <string name="msg_placing_order">Placing order</string>
    <string name="msg_creating_account">Creating Account</string>
    <string name="msg_logging_in">Logging in</string>
    <string name="msg_email_sending">Sending email</string>
    <string name="msg_reseting_password">Reseting Password</string>
    <string name="msg_activate_from_link">Activation pending. Please check the link in the email.</string>
    <string name="msg_login_success">Logged in successfully</string>
    <string name="msg_code_send_success">Code sent successfully</string>
    <string name="msg_reset_password_success">Password Reset successfully.</string>
    <string name="msg_logout_success">Logged out</string>
    <string name="msg_fetching_restaurants">Fetching Restaurants</string>
    <string name="msg_food_added_basket">Item added to basket!</string>
    <string name="msg_order_placed_success">Order successfully placed!</string>
    <string name="msg_processing">Processing</string>
    <string name="msg_sure_delete_address">Sure to delete this address?</string>
    <string name="msg_address_added">Address added successfully</string>
    <string name="msg_address_updated">Address updated successfully</string>
    <string name="msg_valid_promo">Promo applied</string>
    <string name="msg_turn_on_location">Please turn on your location services and retry</string>
    <string name="snack_retry">RETRY</string>
    <string name="img_discount">Discount</string>
    <string name="img_clear">Clear</string>
    <string name="img_right_arow">Right Arrow</string>
    <string name="arabic">العربية</string>
    <string name="english">English</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="reviews">&#160;Reviews</string>
    <string name="set_your_location">Set your location</string>
    <string name="choose_language">Choose your language</string>
    <string name="location">Location</string>
    <string name="at">&#160;at&#160;</string>
    <string name="free">Free</string>
    <string name="address_locality">Address by GPS</string>
    <string name="address2">Description Address</string>
    <string name="nickname_home">Nickname e.g, home</string>
    <string name="apply">Apply</string>
    <string name="min_delivery">&#160;min delivery</string>
    <string name="lo_2_hi">Low to high</string>
    <string name="hi_2_lo">High to low</string>
    <string name="popularity">Popularity</string>
    <string name="ratings">Ratings</string>
    <string name="delivery_instructions">Landmark e.g, opposite New Eden Mall</string>
    <string name="city">City</string>
    <string name="region">Region</string>
    <string name="to">to</string>
    <string name="show_restaurants">Show Restaurants</string>
    <string name="all_restaurants">All Restaurants</string>
    <string name="create_an_account">Create an Account</string>
    <string name="connect_with_shopini">Connect with Shopini</string>
    <string name="or_use_email">or use email address</string>
    <string name="log_in">Log In</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_continue">Continue</string>
    <string name="dont_have_account">You don\'t have an account?</string>
    <string name="in_process">In Process</string>
    <string name="on_the_way">On The Way</string>
    <string name="in_the_way">In The Way</string>
    <string name="delivered">Delivered</string>
    <string name="cancelled_by_admin">Cancelled by Admin</string>
    <string name="create_account">Create Your Account</string>
    <string name="email">Mobile no</string>
    <string name="code">Code</string>
    <string name="password">Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="fathers_name">Father\'s Name(Optional)</string>
    <string name="family_name">Family Name</string>
    <string name="gender">Gender</string>
    <string name="get_your_current_location">Click here to get a GPS location</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="email_address">Email Address</string>
    <string name="mobile_no">Mobile No</string>
    <string name="change_password"><u>Change password</u></string>
    <string name="sample_text">Sample Text</string>
    <string name="sample_text_long">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="sample_name">John Doe</string>
    <string name="sample_number">0</string>
    <string name="sample_date">November 15, 2015</string>
    <string name="delivery_date">Delivery date</string>
    <string name="delivery_time">Delivery time</string>
    <string name="sort">Sort</string>
    <string name="cuisine">Cuisine</string>
    <string name="price">Price</string>
    <string name="_continue">Continue</string>
    <string name="add_new_card">+ Add new Card</string>
    <string name="wallet_balance">Wallet Balance:&#160;</string>
    <string name="_default">Default</string>
    <string name="recharge_date">Recharge Date</string>
    <string name="card_no">Card No.</string>
    <string name="balance">Balance</string>
    <string name="order_number">Order No.</string>
    <string name="filter_offer">Offers</string>
    <string name="filter_new_restaurant">New Restaurant</string>
    <string name="filter_rating">Ratings</string>
    <string name="filter_open_restaurant">Open Restaurants</string>
    <string name="filter_veg">Pure Veg</string>
</resources>