<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/menu_search"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_notification"
        android:icon="@drawable/ic_notifications_none_white_24dp"
        android:title="@string/menu_notification"
        app:showAsAction="ifRoom" />

    <!--<item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:title="@string/menu_refresh"
        app:showAsAction="never" />-->
    <item
        android:id="@+id/menu_filter"
        android:icon="@drawable/menu_filter"
        android:title="@string/menu_filter"
        app:showAsAction="ifRoom" />
</menu>