<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:descendantFocusability="blocksDescendants"
    android:layout_marginBottom="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sample_name"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDefaultAddress"
            android:layout_width="80dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/ibMenu"
            android:layout_toStartOf="@+id/ibMenu"
            android:padding="10dp"
            android:text="@string/_default"
            android:textAllCaps="true"
            android:visibility="gone"
            android:textColor="@color/greenButton" />

        <ImageButton
            android:id="@+id/ibMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@null"
            android:padding="10dp"
            android:src="@drawable/ic_more_vert_black_18dp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvName"
            android:drawableLeft="@drawable/ic_call_black_18dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_call_black_18dp"
            android:padding="10dp"
            android:text="@string/sample_number" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvPhone"
            android:drawableLeft="@drawable/ic_location_on_black_18dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_location_on_black_18dp"
            android:padding="10dp"
            android:text="@string/sample_text_long" />
    </RelativeLayout>
</androidx.cardview.widget.CardView>